<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Vocabularity</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete all folders</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_pet">Add a folder</string>


    <string name="editor_activity_title_new_word">Add new card</string>

    <!-- Title for the activity to edit a pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_pet">Edit a folder</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>


    <!-- Toast message in editor when current pet was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_pet_successful">Updated successful</string>
    <!-- Toast message in editor when current pet has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_pet_failed">Error with updating</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="folder_name">Folder name</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_gender">Gender</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Measurement</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_folder_name">Folder title</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_breed">Breed</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_add_word">Word</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_add_word_translation">Translation</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_weight">Weight</string>

    <!-- Units for weight of the pet (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_pet_weight">kg</string>

    <!-- Label for dropdown menu option if the pet's gender is unknown [CHAR LIMIT=20] -->
    <string name="gender_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the pet is male [CHAR LIMIT=20] -->
    <string name="gender_male">Male</string>

    <!-- Label for dropdown menu option if the pet is female [CHAR LIMIT=20] -->
    <string name="gender_female">Female</string>

    <!-- Toast message in editor when new pet has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_pet_successful">Pet saved</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_pet_failed">Error with saving folder</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>


    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="delete_folder_title">Are you sure?</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="delete_folder_msg">Delete the folder and all cards?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="cancel_deleting">Cancel</string>
    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="ok_delete">Ok</string>


    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="delete_card_title">Are you sure?</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="delete_card_msg">Delete the card</string>


    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="delete_deck_title">Are you sure?</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="delete_deck_msg">Delete the deck? All decks will be recalculated.</string>


    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_successful">Deleted successful</string>
    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_failed">Error with deleting</string>
    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this pet?</string>
    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="deck_dummy">Deck</string>


    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Welcome to Vocabularity</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">To begin, create a folder</string>

    <!-- Label for the pet's breed if the breed is unknown [CHAR LIMIT=20] -->
    <string name="unknown_breed">Unknown breed</string>

    <string name="folder_image_button_description">Add image to the folder</string>
    <string name="ok_button">Ok</string>
    <string name="cancel_button">Cancel</string>
    <string name="options">options</string>


    <string name="action_go_to_settings">Settings</string>

    <string name="words_at_time">Words at a time: </string>

    <string name="set_words_at_time">Set words at a time</string>

    <string name="you_are_learning">You are learning</string>

    <string name="column_word_title">Word</string>
    <string name="column_translation_title">Translation</string>


    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="arabic">Arabic</string>

    <string name="next">Next</string>
    <string name="lets_start">Let\'s start</string>


    <string-array name="menu">
        <item>Mark</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

    <string-array name="menu1">
        <item>Uncheck</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="root">Root</string>

    <string name="learning_languages">Learning languages</string>
    <!--<string name="words_at_time">Learning languages</string>-->

    <string name="settings">Settings</string>

    <string name="are_you_sure">Are you sure?</string>

    <string name="delete_language_alert_text">This action will delete all folders and cards that belong to this language</string>
    <string name="about">About</string>
    <string name="aboutVocabularity">Vocabularity for android</string>
    <string name="version">Version 1.0</string>

    <string name="oops">Oops!</string>
    <string name="you_should_learn_one_language">You should learn at least one language</string>

    <string name="what_languages_are_you_going_to_learn">What languages are you going to learn?</string>

    <string name="how_many_words">How many words do you plan to learn every day?</string>

    <string name="the_folder_is_empty">The folder is empty</string>
    <string name="create_folder_or_upload_words">Create another folder here or upload words</string>


    <string name="upload_words_from_excel_file">Upload words from excel file</string>
    <string name="upload_words_description">To create decks from excel put words in the A column and translation into B column</string>
    <string name="do_not_show_again">Do not show again</string>

    <string name="show_tips">Show tips</string>
    <string name="interface_settings">Interface settings</string>

    <string name="uploading">Uploading</string>

    <string name="invalid_data">Invalid data</string>
    <string name="requires_android_5">Not supported. Android 5 or above is required</string>

    <string name="create">Create</string>
    <string name="save">Save</string>

    <string name="card_saved">Card saved</string>
</resources>
