<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <CheckBox
        android:id="@+id/englishCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/english" />

    <CheckBox
        android:id="@+id/russianCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/russian" />

    <CheckBox
        android:id="@+id/arabicCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/arabic" />
</LinearLayout>